--- a/style.css
+++ b/style.css
@@ -139,3 +139,55 @@ footer{
     padding: 20px;
     margin-bottom: 20px;
 }
+
+.tekstas-virs-laikrodzio{
+    text-align: center;
+    position: absolute;
+    left: 61.5%;
+    top: 30%;
+
+    font-family: 'Share Tech Mono', monospace;
+    color: #daf6ff;
+    font-size: 30px;
+    text-shadow: 0 0 20px rgba(10, 175, 230, 1),  0 0 20px rgba(10, 175, 230, 0);
+}
+
+
+.laikrodis{
+    text-align: center;
+    position: absolute;
+    left: 65%;
+    top: 40%;
+
+    font-family: 'Share Tech Mono', monospace;
+    color: #daf6ff;
+    font-size: 50px;
+    text-shadow: 0 0 20px rgba(10, 175, 230, 1),  0 0 20px rgba(10, 175, 230, 0);
+}
+
+
+#clock {
+    font-family: 'Share Tech Mono', monospace;
+    color: #ffffff;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: #daf6ff;
+    text-shadow: 0 0 20px rgba(10, 175, 230, 1),  0 0 20px rgba(10, 175, 230, 0);
+    .time {
+        letter-spacing: 0.05em;
+        font-size: 80px;
+        padding: 5px 0;
+    }
+    .date {
+        letter-spacing: 0.1em;
+        font-size: 24px;
+    }
+    .text {
+        letter-spacing: 0.1em;
+        font-size: 12px;
+        padding: 20px 0 0;
+    }
+}
