--- a/style.css
+++ b/style.css
@@ -140,27 +140,9 @@ footer{
     margin-bottom: 20px;
 }
 
-.tekstas-virs-laikrodzio{
-    text-align: center;
-    position: absolute;
-    left: 61.5%;
-    top: 30%;
-
+.tekstas-virs-laikrodzio, .laikrodis{
     font-family: 'Share Tech Mono', monospace;
     color: #daf6ff;
     font-size: 30px;
-    text-shadow: 0 0 20px rgba(10, 175, 230, 1),  0 0 20px rgba(10, 175, 230, 0);
-}
-
-
-.laikrodis{
-    text-align: center;
-    position: absolute;
-    left: 65%;
-    top: 40%;
-
-    font-family: 'Share Tech Mono', monospace;
-    color: #daf6ff;
-    font-size: 50px;
     text-shadow: 0 0 20px rgba(10, 175, 230, 1),  0 0 20px rgba(10, 175, 230, 0);
 }
